DeployStrategy/k8s/recreate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strategy
  namespace: deploy-strategy
  labels:
    app: strategy
spec:
  strategy:
    type: Recreate
  replicas: 10
  selector:
    matchLabels:
      app: strategy
  template:
    metadata:
      labels:
        app: strategy
    spec:
      containers:
        - name: strategy
          image: zancrow20/deploy-strategy:v1
          ports:
            - containerPort: 8080
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            failureThreshold: 1
            initialDelaySeconds: 15
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            failureThreshold: 10
            initialDelaySeconds: 30
            periodSeconds: 10
