DeployStrategy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: strategy
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: strategy
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: strategy
